--- a/skript/Makefile
+++ b/skript/Makefile
@@ -10,8 +10,11 @@ TEXFILES = vorwort.tex einleitung.tex maschinen.tex sprachen.tex \
 
 skript.pdf:	skript.tex $(TEXFILES) skript.ind 
 	pdflatex skript.tex
+	bibtex skript
 
 skript.ind:	skript.tex $(TEXFILES)
 	touch skript.ind
 	pdflatex skript.tex
 	makeindex skript.idx
+
+#	references.bib
