--- a/code/gauss/pthread/Makefile
+++ b/code/gauss/pthread/Makefile
@@ -4,10 +4,10 @@
 # (c) 2014 Prof Dr Andreas Mueller, Hochschule Rapperswil
 #
 CC = gcc
-CFLAGS = -Wall -O2 -g -I../common
+CFLAGS = -Wall -O2 -g -std=c99 -I../common 
 
 gauss:	gauss.c
-	$(CC) $(CFLAGS) -o gauss gauss.c -L../common -lgauss
+	$(CC) $(CFLAGS) -o gauss gauss.c -L../common -lgauss -lpthread
 
 test:	gauss
 	./gauss 10
