--- a/code/gauss/opencl/Makefile
+++ b/code/gauss/opencl/Makefile
@@ -4,10 +4,10 @@
 # (c) 2014 Prof Dr Andreas Mueller, Hochschule Rapperswil
 #
 CC = gcc
-CFLAGS = -g -O2 -Wall -I../common
+CFLAGS = -std=c99 -g -O2 -Wall -I../common -I/opt/AMDAPP/include
 
 gauss:	gauss.c
-	$(CC) $(CFLAGS) -o gauss gauss.c -framework opencl -L../common -lgauss
+	$(CC) $(CFLAGS) -o gauss gauss.c -L../common -lgauss -L/opt/AMDAPP/lib/x86_64 -lOpenCL
 
 test:	gauss
-	./gauss
+	./gauss -p 6 -d -D -n 10
