--- a/aufgaben/Makefile
+++ b/aufgaben/Makefile
@@ -4,7 +4,9 @@
 # (c) 2013 Prof Dr Andreas Mueller, Hochschule Rapeprswil
 # $Id$
 #
-TEXFILES = 
+TEXFILES = backprojection.tex des.tex globularcluster.tex green.tex \
+	heat.tex ising.tex julia.tex mapreduce.tex montecarlo.tex \
+	openfoam.tex poisson.tex quat.tex sor.tex
 
 aufgaben.pdf:	aufgaben.tex $(TEXFILES)
 	pdflatex aufgaben.tex
