complete sample, add computation results

--- a/skript/Makefile
+++ b/skript/Makefile
@@ -3,12 +3,13 @@
 #
 # (c) 2013 Prof Dr Andreas Mueller, Hochschule Rapperswil
 #
+SAMPLEFILES = sample/sample.tex sample/sample.bib
 
 TEXFILES = vorwort.tex einleitung.tex maschinen.tex sprachen.tex \
-	daten.tex algorithm.tex  \
-	sample/sample.tex
+	daten.tex algorithm.tex $(SAMPLEFILES)
 
-skript.pdf:	skript.tex $(TEXFILES) skript.ind 
+
+skript.pdf:	skript.tex $(TEXFILES) skript.ind  skript.bbl
 	pdflatex skript.tex
 	bibtex skript
 
@@ -18,3 +19,5 @@ skript.ind:	skript.tex $(TEXFILES)
 	makeindex skript.idx
 
 #	references.bib
+skript.bbl:		skript.aux
+	bibtex skript
