--- a/skript/Makefile
+++ b/skript/Makefile
@@ -8,8 +8,9 @@ SAMPLEFILES = sample/sample.tex sample/sample.bib
 TEXFILES = vorwort.tex einleitung.tex maschinen.tex sprachen.tex \
 	daten.tex algorithm.tex $(SAMPLEFILES)
 
+BLXFILES = skript1-blx.bbl skript2-blx.bbl
 
-skript.pdf:	skript.tex $(TEXFILES) skript.ind  skript.bbl
+skript.pdf:	skript.tex $(TEXFILES) skript.ind $(BLXFILES)
 	pdflatex skript.tex
 	bibtex skript
 
@@ -18,6 +19,13 @@ skript.ind:	skript.tex $(TEXFILES)
 	pdflatex skript.tex
 	makeindex skript.idx
 
-#	references.bib
+# References
+
 skript.bbl:		skript.aux
 	bibtex skript
+
+skript1-blx.bbl:	skript1-blx.aux
+	bibtex skript1-blx
+
+skript2-blx.bbl:	skript2-blx.aux
+	bibtex skript2-blx
