add openmpi results

--- a/code/gauss/openmp/Makefile
+++ b/code/gauss/openmp/Makefile
@@ -13,5 +13,5 @@ gauss:	gauss.c
 test:	gauss
 	./gauss 10
 
-results.pdf:	results.csv
+results.pdf:	results.csv results.R
 	R --vanilla --quiet < results.R
