vervollstaendigung Performance Messungen

--- a/code/gauss/openmpi/Makefile
+++ b/code/gauss/openmpi/Makefile
@@ -12,5 +12,5 @@ gauss:	gauss.c
 test:	gauss
 	mpirun -np 2 ./gauss
 
-results.pdf:	results.csv results.R
+results.pdf threads.pdf:	results.csv results.R
 	R --vanilla --quiet < results.R
