add results for OpenCL

--- a/code/gauss/opencl/Makefile
+++ b/code/gauss/opencl/Makefile
@@ -10,4 +10,12 @@ gauss:	gauss.c
 	$(CC) $(CFLAGS) -o gauss gauss.c -L../common -lgauss -L/opt/AMDAPP/lib/x86_64 -lOpenCL
 
 test:	gauss
-	./gauss -P 1 -p 6 -d 10 1000
+	./gauss -P 0 -p 6 -d 10 1000
+
+graphpdfs = vector-amd.pdf vector-intel.pdf vector-nvidia.pdf results.pdf
+
+graphs:	$(graphpdfs)
+
+$(graphpdfs):	results.R results.csv
+	R --vanilla --quiet < results.R
+	
