add heat equation solution

--- a/code/heat/Makefile
+++ b/code/heat/Makefile
@@ -1,16 +1,21 @@
 #
-# Makefile to build the MPI version of the Gauss algorithm
+# Makefile to build the MPI version of the heat equation solution
 #
 # (c) 2014 Prof Dr Andreas Mueller, Hochschule Rapperswil
 #
-CC = mpicc
 CFLAGS = -Wall -g -O2 -std=c99 -I../gauss/common
+LDFLAGS = -L../gauss/common -lgauss -lnetcdf
 
-heat:	heat.c
-	$(CC) $(CFLAGS) -o heat heat.c -L../gauss/common -lgauss
+# OpenMP implementation of 1 dimension heat equation solver
+FILES = output.c heat.c
+
+heat:	$(FILES)
+	$(CC) $(CFLAGS) -fopenmp -o heat $(FILES) $(LDFLAGS)
 
 test:	heat
-	mpirun -np 2 ./heat
+	rm -f out.nc
+	./heat -n 999 -s 1 -t 0.1 out.nc
 
-results.pdf threads.pdf:	results.csv results.R
+# measurements
+results.pdf:	results.csv results.R
 	R --vanilla --quiet < results.R
