improve graphics somewhat

--- a/skript/graphics/Makefile
+++ b/skript/graphics/Makefile
@@ -4,7 +4,7 @@
 # (c) 2014 Prof Dr Andreas Mueller, Hochschule Rappersil
 # $Id$
 # 
-all:	work numa
+all:	work numa laplacian
 
 work:	work-1.pdf
 
@@ -17,3 +17,10 @@ numa:	numa-1.pdf
 numa-1.pdf:	numa.mp
 	TEX=latex mpost numa.mp
 	mptopdf numa.1
+
+laplacian:	laplacian-1.pdf
+
+laplacian-1.pdf:	laplacian.mp
+	TEX=latex mpost laplacian.mp
+	mptopdf laplacian.1
+
