minor improvements, domain decomposition graphic

--- a/skript/heat/Makefile
+++ b/skript/heat/Makefile
@@ -3,7 +3,8 @@
 #
 # (c) 2014 Prof Dr Andreas Mueller, Hochschule Rapperswil
 #
-heat-1.pdf heat-2.pdf:	heat.mp
+heat-1.pdf heat-2.pdf heat-3.pdf:	heat.mp
 	TEX=latex mpost heat.mp
 	mptopdf heat.1
 	mptopdf heat.2
+	mptopdf heat.3
