--- a/skript/graphics/Makefile
+++ b/skript/graphics/Makefile
@@ -24,12 +24,13 @@ laplacian-1.pdf:	laplacian.mp
 	TEX=latex mpost laplacian.mp
 	mptopdf laplacian.1
 
-descent:	descent-1.pdf
+descent:	descent-1.pdf descent-2.pdf descent-3.pdf
 
-descent-1.pdf descent-2.pdf:	descent.mp
+descent-1.pdf descent-2.pdf descent-3.pdf:	descent.mp
 	TEX=latex mpost descent.mp
 	mptopdf descent.1
 	mptopdf descent.2
+	mptopdf descent.3
 
 descent3d.png:	descent3d.pov
 	povray -W1920 -H1080 descent3d.pov
