--- a/skript/graphics/Makefile
+++ b/skript/graphics/Makefile
@@ -4,7 +4,9 @@
 # (c) 2014 Prof Dr Andreas Mueller, Hochschule Rappersil
 # $Id$
 # 
-all:	work numa laplacian descent descent3d.jpg cgresults.pdf
+all:	work numa laplacian descent \
+	cgresults.pdf \
+	descent3d.jpg cg3d-center.jpg cg3d-large.jpg
 
 work:	work-1.pdf
 
@@ -32,8 +34,11 @@ descent-1.pdf descent-2.pdf descent-3.pdf:	descent.mp
 	mptopdf descent.2
 	mptopdf descent.3
 
+w = 1920
+h = 1080
+
 descent3d.jpg:	descent3d.pov
-	povray -Odescent3d.jpg +A -W960 -H540 descent3d.pov
+	povray -Odescent3d.jpg +A -W$(w) -H$(h) descent3d.pov
 
 cgresults.csv:	cgexample.m
 	octave < cgexample.m
@@ -42,7 +47,7 @@ cgresults.pdf:	cgexample.R cgresults.csv
 	R --vanilla --quiet < cgexample.R
 
 cg3d-large.jpg:	cg3d.pov cg3d-large.pov
-	povray -Ocg3d-large.jpg -W960 -H540 +A cg3d-large.pov
+	povray -Ocg3d-large.jpg -W$(w) -H$(h) +A cg3d-large.pov
 
 cg3d-center.jpg:	cg3d.pov cg3d-center.pov
-	povray -Ocg3d-center.jpg -W960 -H540 +A cg3d-center.pov
+	povray -Ocg3d-center.jpg -W$(w) -H$(h) +A cg3d-center.pov
