kleine Verbesserungen: complex, defaults

--- a/code/julia/Makefile
+++ b/code/julia/Makefile
@@ -3,6 +3,9 @@
 #
 # (c) 2014 Prof Dr Andreas Mueller, Hochschule Rapperswil
 #
+WIDTH = 256
+HEIGHT = 144
+
 CC = gcc
 CFLAGS = -std=c99 -g -O2 -Wall -I../gauss/common -I/opt/AMDAPP/include -I/usr/include/cfitsio 
 LDFLAGS = -L../gauss/common -lgauss -L/opt/AMDAPP/lib/x86_64 -lOpenCL -lcfitsio -lm
@@ -19,7 +22,7 @@ julia2:	julia2.c point.c point.h
 test:	test1 test2
 
 test1:	julia1
-	time ./julia1 -P 0 -d -e -g 0.5 -c '(0,0.66)' out1.fits
+	time ./julia1 -w $(WIDTH) -h $(HEIGHT) -P 0 -d -e -g 0.5 -c '(0,0.66)' out1.fits
 
 test2:	julia2
-	time ./julia2 -P 0 -d -s -i 1000 -n 10000 out2.fits
+	time ./julia2 -d -c '(0,0.66)' -P 0 -s -n 100 -H out2.csv out2.fits
