--- a/code/julia/Makefile
+++ b/code/julia/Makefile
@@ -3,8 +3,8 @@
 #
 # (c) 2014 Prof Dr Andreas Mueller, Hochschule Rapperswil
 #
-WIDTH = 256
-HEIGHT = 144
+WIDTH = 2560
+HEIGHT = 1440
 
 CC = gcc
 CFLAGS = -std=c99 -g -O2 -Wall -I../gauss/common -I/opt/AMDAPP/include -I/usr/include/cfitsio 
@@ -25,4 +25,4 @@ test1:	julia1
 	time ./julia1 -w $(WIDTH) -h $(HEIGHT) -P 0 -d -e -g 0.5 -c '(0,0.66)' out1.fits
 
 test2:	julia2
-	time ./julia2 -d -c '(0,0.66)' -P 0 -s -n 100 -H out2.csv out2.fits
+	time ./julia2 -d -w $(WIDTH) -h $(HEIGHT) -c '(0,0.66)' -P 0 -s -n 100 -H out2.csv out2.fits
