--- a/skript/Makefile
+++ b/skript/Makefile
@@ -31,7 +31,8 @@ TEXFILES = vorwort.tex einleitung.tex maschinen.tex sprachen.tex \
 	$(GREENFILES) $(STOSSWELLENFILES)
 
 BLXFILES = skript1-blx.bbl skript2-blx.bbl skript3-blx.bbl skript4-blx.bbl \
-	skript5-blx.bbl skript6-blx.bbl skript7-blx.bbl skript8-blx.bbl
+	skript5-blx.bbl skript6-blx.bbl skript7-blx.bbl skript8-blx.bbl \
+	skript9-blx.bbl
 
 IMAGES = graphics/cgresults.pdf
 
@@ -72,6 +73,9 @@ skript7-blx.bbl:	skript7-blx.aux
 
 skript8-blx.bbl:	skript8-blx.aux
 	bibtex skript8-blx
+
+skript9-blx.bbl:	skript9-blx.aux
+	bibtex skript9-blx
 
 # standalone compilation of a single article
 standalone.pdf:	standalone.tex $(TEXFILES)
